# shellgeist

./: .gitignore  .shellgeist.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agent.py  flake.nix  install.sh  pyproject.toml  requirements.txt  shellgeist  shellgeist.tmp  test_ollama.py  workflow.py
.github/workflows/: ci.yml
assets/: ascii-logo.txt
backend/shellgeist/: __init__.py  cli.py  config.py  context.py  daemon.py  models.py  protocol.py  sgd.py  util_git.py  util_json.py  util_path.py
backend/shellgeist/agent/: __init__.py  core.py  loop.py  messages.py  models.py  orchestrator.py  signals.py  state.py
backend/shellgeist/agent/parsing/: json_utils.py  normalize.py  parser.py
backend/shellgeist/diff/: __init__.py  apply.py  guards.py
backend/shellgeist/io/: __init__.py  events.py  results.py  telemetry.py  transport.py
backend/shellgeist/llm/: __init__.py  client.py  prompt.py  rules.py  stream.py
backend/shellgeist/protocol/: __init__.py  handler.py  helpers.py  models.py
backend/shellgeist/runtime/: paths.py  policy.py  protocol.py  server.py  session.py  transport.py
backend/shellgeist/safety/: __init__.py  blocked.py  loop_guard.py  retry.py  verify.py
backend/shellgeist/session/: __init__.py  ops.py  repair.py  store.py
backend/shellgeist/tools/: __init__.py  base.py  coder.py  edit.py  editor.py  executor.py  fs.py  git_utils.py  normalize.py  parser.py  patch.py  planner.py  policy.py  preview.py  reviewer.py  runtime.py  shell.py
backend/tests/: conftest.py  test_core.py  test_imports.py  test_loop_guard.py  test_paths_and_fs.py  test_safety.py
cli/: sg.py
docs/: AUDIT.md  README.md  audit-results-deep.md  cloc-report.md  cloc-results.txt  results.md  specification.txt
docs/diagrams/: agent_logic.puml  architecture.puml  sequence.puml
modules/: auto_agent.py  chat.py  logger.py  models.py  repo_tools.py  safety.py  shell_tools.py
nvim/lua/shellgeist/: conflict.lua  diff.lua  init.lua  rpc.lua  sidebar.lua  ui.lua
nvim/plugin/: shellgeist.lua
test/: ping.py
