[project]
name = "shellgeist"
version = "0.1.0"
description = "ShellGeist v4"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "anyio>=4.0.0",
  "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
