[project]
name = "shellgeist"
version = "0.1.0"
description = "AI-powered code editing assistant for Neovim"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Romeo Cavazza", email = "romeo@cavazza.dev" }
]
maintainers = [
    { name = "Romeo Cavazza", email = "romeo@cavazza.dev" }
]
keywords = [
    "neovim",
    "ai",
    "code-editing",
    "llm",
    "ollama",
    "openai",
    "diff",
    "plugin",
    "daemon",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Editors",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/RomeoCavazza/shellgeist"
Documentation = "https://github.com/RomeoCavazza/shellgeist#readme"
Repository = "https://github.com/RomeoCavazza/shellgeist.git"
Issues = "https://github.com/RomeoCavazza/shellgeist/issues"
Changelog = "https://github.com/RomeoCavazza/shellgeist/blob/main/CHANGELOG.md"

[project.scripts]
shellgeist = "shellgeist.cli:main"
sgd = "shellgeist.daemon:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
shellgeist = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
